feat: desenvolvimento do swagger e estrutura de mappers
